
Table users {
	id int [pk, increment, not null, note: '用户ID']
	username varchar(255) [unique, not null, note: '用户名']
	password varchar(255) [not null, note: '加密存储']
	created_at datetime [not null, default: `CURRENT_TIMESTAMP`, note: '创建时间']
	last_login_at datetime [not null, default: `CURRENT_TIMESTAMP`, note: '上次登录时间']
	score int [not null, default: 0, note: '非负，用于排名']
	score_updated_at datetime [not null, default: `CURRENT_TIMESTAMP`, note: '分数最后更新时间']
}

Table save_games {
	user_id int [pk, not null, note: '用户ID']
	slot_number int [pk, not null, note: '1-6，CHECK (slot_number BETWEEN 1 AND 6)']
	game_data text [note: 'JSON 格式，可为 null']
	saved_at datetime [not null, default: `CURRENT_TIMESTAMP`, note: '保存时间']
}

Table messages {
	id int [pk, increment, not null, note: '消息ID']
	user_id int [not null, note: '用户ID']
	message text [not null, note: '消息内容']
	status int [not null, default: 0, note: '0=待处理,1=已处理,2=异常，CHECK (status IN (0,1,2))']
	created_at datetime [not null, default: `CURRENT_TIMESTAMP`, note: '创建时间']
}

Table chat_sessions {
	id int [pk, increment, not null, note: '会话ID']
	user_id int [not null, note: '用户ID']
	title varchar(255) [not null, note: '会话标题']
	type int [not null, default: 1, note: '1=用户,2=npc，CHECK (type IN (1,2))']
	created_at datetime [not null, default: `CURRENT_TIMESTAMP`, note: '创建时间']
}

Table chat_messages {
	id int [pk, increment, not null, note: '消息ID']
	session_id int [not null, note: '会话ID']
	role int [not null, default: 1, note: '1=用户,2=npc，CHECK (role IN (1,2))']
	content text [not null, note: '消息内容']
	created_at datetime [not null, default: `CURRENT_TIMESTAMP`, note: '创建时间']
}

// 外键约束
// save_games.user_id → users.id (ON DELETE CASCADE)
// messages.user_id → users.id (ON DELETE CASCADE)
// chat_sessions.user_id → users.id (ON DELETE CASCADE)
// chat_messages.session_id → chat_sessions.id (ON DELETE CASCADE)

Ref: save_games.user_id > users.id [delete: cascade]
Ref: messages.user_id > users.id [delete: cascade]
Ref: chat_sessions.user_id > users.id [delete: cascade]
Ref: chat_messages.session_id > chat_sessions.id [delete: cascade]
